# tour-guide-robot

./: .gitattributes  .gitignore  IMPORTANT_COMMANDS.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tourbot_mission/lib/tourbot_mission/: door_detector_node  tour_deliberation_node
install/tourbot_mission/share/tourbot_mission/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/tourbot_behaviors/: package.xml  setup.cfg  setup.py
src/tourbot_behaviors/config/: door_behavior.yaml
src/tourbot_behaviors/launch/: door_behavior.launch.py
src/tourbot_behaviors/tourbot_behaviors/: align_to_apriltag_server.py  door_behavior_server.py  landmark_task_server.py  wait_for_tag_removed_server.py
src/tourbot_bringup/: package.xml  setup.cfg  setup.py
src/tourbot_bringup/config/: nav2_params.yaml  nav2_params_backup.yaml  nav2_params_old.yaml  nav2_params_v2.yaml  nav2_test_help.yaml
src/tourbot_bringup/launch/: mission.launch.py  robot.launch.py  sim.launch.py
src/tourbot_bringup/maps/: tb4_map_sim.pgm  tb4_map_sim.yaml
src/tourbot_bringup/maps/cardboard_city/: cardboard_city.yaml  map_area.pgm  (+1 more)
src/tourbot_interfaces/: CMakeLists.txt  package.xml
src/tourbot_interfaces/action/: AlignToAprilTag.action  DoLandmarkTask.action  DoorTraverse.action  WaitForTagRemoved.action
src/tourbot_landmarks/: package.xml  setup.cfg  setup.py
src/tourbot_landmarks/config/cardboard_city/: landmarks.yaml
src/tourbot_landmarks/config/default/: landmarks.yaml
src/tourbot_landmarks/tourbot_landmarks/: landmarks_loader.py
src/tourbot_mission/: package.xml  setup.cfg  setup.py
src/tourbot_mission/tourbot_mission/: door_detector_node.py  nav_to_pose_client.py  tour_deliberation_node.py
src/tourbot_nav2_plugins/: CMakeLists.txt  package.xml  plugin.xml
src/tourbot_nav2_plugins/include/tourbot_nav2_plugins/: landmark_task_executor.hpp
src/tourbot_nav2_plugins/src/: landmark_task_executor.cpp
src/tourbot_perception/: package.xml  setup.cfg  setup.py
src/tourbot_perception/config/: apriltags_36h11.yaml
src/tourbot_perception/launch/: apriltag_pipeline.launch.py
src/tourbot_perception/tourbot_perception/: tag_state_publisher.py
(+1 files in other folders)
